--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+    restart: always
   nginx:
     image: nginx:alpine
     container_name: sio2-nginx
@@ -34,6 +35,7 @@ services:
       - "443:443"
     depends_on:
       - oioioi
+    restart: always
   docker-gen:
     image: jwilder/docker-gen
     container_name: sio2-docker-gen
@@ -47,6 +49,7 @@ services:
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.docker_gen=true"
     command: -notify-sighup sio2-nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    restart: always
   postgres:
     image: postgres:latest
     container_name: sio2-postgres
@@ -55,9 +58,11 @@ services:
       - ./postgres/init-user.sh:/docker-entrypoint-initdb.d/init-user.sh
     env_file:
       - .env
+    restart: always
   rabbitmq:
     image: rabbitmq:latest
     container_name: sio2-rabbitmq
+    restart: always
 
 volumes:
   database:
