Adjust settings for oioioi update

--- a/.env.example
+++ b/.env.example
@@ -52,10 +52,11 @@ LANGUAGE_CODE=en
 # Address at which the RabbitMQ instance is located.
 # BROKER_URL=amqp://guest:guest@localhost:5672//
 
-# FILETRACKER_SERVER_ENABLED=False
 
 # Uncomment to allow remote connections.
 # FILETRACKER_LISTEN_ADDR=0.0.0.0
+
+# Uncomment and change to run filetracker on a non-default port.
 # FILETRACKER_LISTEN_PORT=9999
 
 # URL to which remote workers will connect.
