Add new options to .env

--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,12 @@ LANGUAGE_CODE=en
 # USE_UNSAFE_EXEC=False
 # USE_LOCAL_COMPILERS=False
 
+# Current options are:
+# - "vcpu" - (default) OITimeTool
+# - "sio2jail" - SIO2Jail
+# - "cpu" - ptrace (measures real time)
+# DEFAULT_SAFE_EXECUTION_MODE=vcpu
+
 # Upper bound for the tests' execution time (in milliseconds).
 # MAX_TEST_TIME_LIMIT_PER_PROBLEM=
 
@@ -89,6 +95,10 @@ LANGUAGE_CODE=en
 
 # PROBLEMSET_LINK_VISIBLE=True
 # PROBLEM_TAGS_VISIBLE=False
+
+# Enables tracking problem statistics at a slight performance hit.
+# PROBLEM_STATISTICS_AVAILABLE = True
+
 # EVERYBODY_CAN_ADD_TO_PROBLEMSET=False
 
 # Number of concurrently evaluated submissions.
