--- a/.env.example
+++ b/.env.example
@@ -97,7 +97,7 @@ LANGUAGE_CODE=en
 # PROBLEM_TAGS_VISIBLE=False
 
 # Enables tracking problem statistics at a slight performance hit.
-# PROBLEM_STATISTICS_AVAILABLE = True
+# PROBLEM_STATISTICS_AVAILABLE=True
 
 # EVERYBODY_CAN_ADD_TO_PROBLEMSET=False
 
