Add a letsencrypt container to the compose config

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ ADMINS=Your Name|youremail@example.com;Admin|admin@example.com
 # Email address from which messages to users will be sent.
 DEFAULT_FROM_EMAIL=webmaster@example.com
 
+# Email address to which any messages from Let's Encrypt
+# (ie. certificate expiration warnings) will be sent.
+LETSENCRYPT_EMAIL=webmaster@example.com
+
 # These are related to the administrative PostgreSQL user,
 # set a secure password here, but don't touch it otherwise.
 POSTGRES_USER=postgres
