--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,13 +67,14 @@ services:
     container_name: sio2-rabbitmq
     restart: always
   letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
+    image: nginxproxy/acme-companion
     container_name: sio2-letsencrypt
     volumes:
       - ./nginx/certs:/etc/nginx/certs
       - ./docker-gen/vhost.d:/etc/nginx/vhost.d
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - nginx-html:/usr/share/nginx/html
+      - acme:/etc/acme.sh
     environment:
       - "DEFAULT_EMAIL=${LETSENCRYPT_EMAIL}"
       - "NGINX_DOCKER_GEN_CONTAINER=sio2-docker-gen"
@@ -89,3 +90,4 @@ volumes:
   nginx-conf:
   nginx-html:
   nginx-dhparam:
+  acme:
