Update example env var files

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,9 @@ DATABASE_PASSWORD=password
 DATABASE_HOST=postgres
 DATABASE_PORT=5432
 
-# Django's ALLOWED_HOSTS setting. Addresses are separated by spaces.
+# Django's ALLOWED_HOSTS setting.
+# This is a list of hostnames that the web app will allow to be served from.
+# Addresses are separated by spaces.
 ALLOWED_HOSTS=localhost 127.0.0.1
 
 # Local time zone for this installation. Choices can be found here:
@@ -40,7 +42,7 @@ TIME_ZONE=Europe/Warsaw
 LANGUAGE_CODE=en
 
 # Generate an unique, secure key, and don't share it with anyone!
-# SECRET_KEY=notreallysecret
+SECRET_KEY=notreallysecret
 
 # The prefix which is appended to emails sent by the website.
 # Please note that an additional space is appended after this string.
@@ -51,37 +53,39 @@ LANGUAGE_CODE=en
 # EMAIL_HOST_USER=user
 # EMAIL_HOST_PASSWORD=password
 
+# Set this to True once you've configured the above values
+# to point to a valid SMTP server.
 # SEND_USER_ACTIVATION_EMAIL=False
 
 # Address at which the RabbitMQ instance is located.
-# BROKER_URL=amqp://guest:guest@localhost:5672//
+BROKER_URL=amqp://guest:guest@sio2-rabbitmq:5672//
 
 
 # Uncomment to allow remote connections.
-# FILETRACKER_LISTEN_ADDR=0.0.0.0
+FILETRACKER_LISTEN_ADDR=0.0.0.0
 
 # Uncomment and change to run filetracker on a non-default port.
-# FILETRACKER_LISTEN_PORT=9999
+FILETRACKER_LISTEN_PORT=9999
 
 # URL to which remote workers will connect.
-# FILETRACKER_URL=http://127.0.0.1:9999
+FILETRACKER_URL=http://localhost:9999
 
 # Set this to 0.0.0.0 for sioworkers to accept remote connections.
-# SIOWORKERS_LISTENER_ADDR=127.0.0.1
+SIOWORKERS_LISTENER_ADDR=0.0.0.0
 
-# RUN_SIOWORKERSD=True
+RUN_SIOWORKERSD=True
 
 # Available options: contest_neutral, contest_if_possible, contest_only.
 # Please consult the oioioi's settings.py file in order to learn more about those.
 # CONTEST_MODE=contest_if_possible
 
-# Uncomment to disable local workers
-# RUN_LOCAL_WORKERS=False
-
 # Uncomment once you've run ./manage.py download_sandboxes and
 # you want to use downloaded sandboxes and compilers
 # USE_UNSAFE_EXEC=False
 # USE_LOCAL_COMPILERS=False
+
+# Uncomment to disable local workers
+# RUN_LOCAL_WORKERS=False
 
 # Current options are:
 # - "vcpu" - (default) OITimeTool
